feat: swagger copycat
